--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://fastapi_backend/;
+            proxy_pass ec2-13-60-28-12.eu-north-1.compute.amazonaws.com/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,11 +17,11 @@ http {
         }
 
         location /docs {
-            proxy_pass http://fastapi_backend/docs;
+            proxy_pass ec2-13-60-28-12.eu-north-1.compute.amazonaws.com/docs;
         }
 
         location /redoc {
-            proxy_pass http://fastapi_backend/redoc;
+            proxy_pass ec2-13-60-28-12.eu-north-1.compute.amazonaws.com/redoc;
         }
     }
 }
