--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,9 +41,9 @@ jobs:
               sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
               sudo chmod +x /usr/local/bin/docker-compose
             fi
-            mkdir -p ~/fastapi-app
+            sudo mkdir -p ~/fastapi-app
             cd ~/fastapi-app
-            docker-compose down
-            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
-            docker-compose up -d --build
+            sudo docker-compose down
+            sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
+            sudo docker-compose up -d --build
 
