docker compose job

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,17 +33,23 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            sudo apt update
-            sudo apt install -y docker.io
-            sudo systemctl start docker
-            sudo systemctl enable docker
-            if [ ! -f /usr/local/bin/docker-compose ]; then
+            sudo apt update && sudo apt install -y docker.io
+            sudo usermod -aG docker $USER
+            newgrp docker
+
+            if ! [ -x "$(command -v docker-compose)" ]; then
               sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
               sudo chmod +x /usr/local/bin/docker-compose
             fi
-            sudo mkdir -p ~/fastapi-app
-            cd ~/fastapi-app
+
+            sudo mkdir -p /home/${{ secrets.SERVER_USER }}/fastapi-app
+            cd /home/${{ secrets.SERVER_USER }}/fastapi-app
+
+            sudo rm -f docker-compose.yml
+            echo '${{ secrets.DOCKER_COMPOSE_FILE }}' | sudo tee docker-compose.yml > /dev/null
+
             sudo docker-compose down
+
             sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
             sudo docker-compose up -d --build
 
