--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.8"
 
 services:
   fastapi:
-    build: .
+    # build: .
+    image: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
     container_name: fastapi_app
     expose:
       - "8000"
