--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   fastapi:
     # build: .
-    image: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
+    image: ${DOCKER_HUB_USERNAME}/fastapi-app:latest
     container_name: fastapi_app
     expose:
       - "8000"
