--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Debug Secrets
+        run: echo "Docker Username: ${{ secrets.DOCKER_HUB_USERNAME }}"
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
