--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,5 +62,5 @@ jobs:
 
             # Pull latest image and restart the app
             sudo docker-compose down
-            sudo docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi-app:latest
+            sudo docker pull passy4ucj/fastapi-app:latest
             sudo docker-compose up -d --build
