--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
-version: "3.8"
-
 services:
   fastapi:
     # build: .
-    image: ${DOCKER_HUB_USERNAME}/fastapi-app:latest
+    # image: ${DOCKER_HUB_USERNAME}/fastapi-app:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: fastapi_app
     expose:
       - "8000"
