--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,8 +60,12 @@ jobs:
             # Remove old docker-compose.yml and create a new one from secrets
             echo '${{ secrets.DOCKER_COMPOSE_FILE }}' | sudo tee docker-compose.yml > /dev/null
 
-            # Clone latest source code
-            git clone https://github.com/passy4ucj/fastapi-book-project.git .
+            # Ensure the repo is up-to-date
+            if [ ! -d ".git" ]; then
+              git clone https://github.com/YOUR_GITHUB_USERNAME/YOUR_REPO_NAME.git .
+            else
+              git pull origin main
+            fi
 
             # Debugging: Check if Dockerfile exists
             if [ ! -f Dockerfile ]; then
