--- a/nginx.conf
+++ b/nginx.conf
@@ -7,9 +7,10 @@ http {
 
     server {
         listen 80;
+        server_name 13.60.28.12;
 
         location / {
-            proxy_pass ec2-13-60-28-12.eu-north-1.compute.amazonaws.com/;
+            proxy_pass http://fastapi:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -17,11 +18,11 @@ http {
         }
 
         location /docs {
-            proxy_pass ec2-13-60-28-12.eu-north-1.compute.amazonaws.com/docs;
+            proxy_pass http://fastapi:8000/docs;
         }
 
         location /redoc {
-            proxy_pass ec2-13-60-28-12.eu-north-1.compute.amazonaws.com/redoc;
+            proxy_pass http://fastapi:8000/redoc;
         }
     }
 }
