--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -104,10 +104,7 @@ jobs:
               sudo rm -rf fastapi-app
             fi
 
-            mkdir -p ~/.ssh
-            ssh-keyscan github.com >> ~/.ssh/known_hosts
-
-            git clone ${{ secrets.REPO_URL }} fastapi-app
+            git clone https://github.com/passy4ucj/fastapi-book-project.git fastapi-app
             cd fastapi-app || exit 1
 
             sudo docker build -t fastapi-app:latest .
