--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -108,7 +108,7 @@ jobs:
             git clone https://github.com/passy4ucj/fastapi-book-project.git fastapi-app
             cd fastapi-app || exit 1
 
-            sudo docker-compose up --build
+            sudo docker-compose up -d --build
 
             # sudo docker build -t fastapi-app:latest .
 
